force-app/main/default/objects/PRISM_AIPriorityQueue__c/PRISM_AIPriorityQueue__c.object-meta.xml
<CustomObject>
    <description>AI-generated prioritized action queue. Combines wildfire risk score and defect severity to rank assets needing work.</description>
    <label>AI Priority Queue</label>
    <nameField>
        <label>Queue Entry ID</label>
        <type>AutoNumber</type>
        <displayFormat>AIQ-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>AI Priority Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>