force-app/main/default/objects/PRISM_AIPriorityQueue__c/fields/ActionRationale__c.field-meta.xml
<CustomField>
    <fullName>ActionRationale__c</fullName>
    <label>Action Rationale</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>