force-app/main/default/objects/PRISM_AIPriorityQueue__c/fields/CompositeScore__c.field-meta.xml
<CustomField>
    <fullName>CompositeScore__c</fullName>
    <label>Composite Score (0-100)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>