force-app/main/default/objects/PRISM_AIPriorityQueue__c/fields/GeneratedDate__c.field-meta.xml
<CustomField>
    <fullName>GeneratedDate__c</fullName>
    <label>Generated Date</label>
    <type>DateTime</type>
    
</CustomField>