force-app/main/default/objects/PRISM_AIPriorityQueue__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <label>Priority Rank</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    
</CustomField>