force-app/main/default/objects/PRISM_AIPriorityQueue__c/fields/RecommendedAction__c.field-meta.xml
<CustomField>
    <fullName>RecommendedAction__c</fullName>
    <label>Recommended Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Immediate De-energize</fullName><default>false</default><label>Immediate De-energize</label></value>
            <value><fullName>Emergency Repair Within 24hrs</fullName><default>false</default><label>Emergency Repair Within 24hrs</label></value>
            <value><fullName>Schedule Repair This Week</fullName><default>false</default><label>Schedule Repair This Week</label></value>
            <value><fullName>Schedule Repair This Month</fullName><default>false</default><label>Schedule Repair This Month</label></value>
            <value><fullName>Monitor and Reassess</fullName><default>false</default><label>Monitor and Reassess</label></value>
        </valueSetDefinition>
    </valueSet>
    
</CustomField>