force-app/main/default/objects/PRISM_AIPriorityQueue__c/fields/WildfireRiskScore__c.field-meta.xml
<CustomField>
    <fullName>WildfireRiskScore__c</fullName>
    <label>Wildfire Risk Score</label>
    <type>Lookup</type>
    <referenceTo>PRISM_WildfireRiskScore__c</referenceTo>
    <relationshipLabel>AI Priority Queue Entries</relationshipLabel>
    <relationshipName>AIPriorityQueueEntries</relationshipName>
    <required>true</required>
</CustomField>